2007-08-20  Mike Krüger <mkrueger@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs,
	  MonoDevelop.SourceEditor.Gui/SourceEditorView.cs,
	  MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Fixed bug
	  82282: Error list pad should take into account line changes done in
	  files.

2007-08-16  Wade Berrier  <wberrier@novell.com> 

	* Makefile.am:
	Removed MonoDevelop.SourceEditor.dll.config.in.  AFAICT MD runs without it.
	This will enable mono-find-requires script to not generate deps on 
	gtksourceview so that the md rpm can be used on all distros.  (Otherwise
	we would need to build MD for all distros, since 10.3 has gtksourceview18)

2007-08-14  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs: Make sure the
	  correct lastSaveTime is stored when the file is reloaded in the editor.

2007-08-09  David Makovský (Yakeen) <yakeen@sannyas-on.net> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Properly dispose
	  Cairo.Context to avoid runtime warnings

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.addin.xml: Removed the CommandService class.
	  Everything is done directly with CommandManager. Moved all extension
	  node types to MD.Components.

2007-08-09  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs,
	  MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs, Makefile.am,
	  MonoDevelop.SourceEditor.addin.xml, MonoDevelop.SourceEditor.mdp:
	  Reorganized the extension point hierarchy. Embedded all add-in manifests
	  as resources.

2007-08-03  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorDisplayBinding.cs,
	  MonoDevelop.SourceEditor/Services.cs: API cleanup. Converted core
	  services into regular classes.

2007-08-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs,