@@ -1,3 +1,8 @@
+2007-08-28  Mike Krüger <mkrueger@novell.com> 
+
+	* MonoDevelop.SourceEditor.Gui/SourceEditorView.cs: Fixed 82207: Incorrect
+	  autocomplete insertion.
+
 2007-08-20  Mike Krüger <mkrueger@novell.com> 
 
 	* MonoDevelop.SourceEditor.Gui/SourceEditorBuffer.cs,
